feat: 뱃지 출력, 기타 예외처리 구현